[gd_scene load_steps=12 format=2]

[ext_resource path="res://tanks/tanks_tankGreen3.png" type="Texture" id=1]
[ext_resource path="res://tanks/tanks_tankGrey3.png" type="Texture" id=2]
[ext_resource path="res://player1.gd" type="Script" id=3]
[ext_resource path="res://oof.wav" type="AudioStream" id=4]
[ext_resource path="res://interface/fonts/kenvector_future_20.tres" type="DynamicFont" id=5]
[ext_resource path="res://tilesets/grass_tiles.tres" type="TileSet" id=6]
[ext_resource path="res://tanks/tanks_tankGreen_body3.png" type="Texture" id=7]
[ext_resource path="res://tanks/tanks_turret2.png" type="Texture" id=8]
[ext_resource path="res://tanks/tanks_tankTracks3.png" type="Texture" id=9]
[ext_resource path="res://tanks/tanks_tankGrey_body3.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.658824, 0.34902, 1, 1 )

[node name="tankfight" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1019.0
margin_bottom = 643.0
color = Color( 0.0431373, 0, 0.223529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
format = 1
tile_data = PoolIntArray( 131079, 4, 0, 131080, 536870916, 0, 196614, 4, 0, 196615, 11, 0, 196616, 536870923, 0, 196617, 536870916, 0, 262149, 4, 0, 262150, 11, 0, 262151, 536870921, 0, 262152, 536870921, 0, 262153, 536870923, 0, 262154, 536870916, 0, 327684, 4, 0, 327685, 11, 0, 327686, 536870921, 0, 327687, 536870921, 0, 327688, 9, 0, 327689, 9, 0, 327690, 536870923, 0, 327691, 536870916, 0, 393219, 4, 0, 393220, 11, 0, 393221, 536870921, 0, 393222, 536870921, 0, 393223, 9, 0, 393224, 9, 0, 393225, 9, 0, 393226, 9, 0, 393227, 536870923, 0, 393228, 536870916, 0, 458752, 1, 0, 458753, 2, 0, 458754, 2, 0, 458755, 11, 0, 458756, 536870921, 0, 458757, 536870921, 0, 458758, 536870921, 0, 458759, 536870921, 0, 458760, 536870921, 0, 458761, 536870921, 0, 458762, 536870921, 0, 458763, 536870921, 0, 458764, 536870923, 0, 458765, 536870914, 0, 458766, 536870914, 0, 458767, 536870913, 0, 524288, 536870921, 0, 524289, 536870921, 0, 524290, 536870921, 0, 524291, 536870921, 0, 524292, 536870921, 0, 524293, 536870921, 0, 524294, 536870921, 0, 524295, 536870921, 0, 524296, 536870921, 0, 524297, 536870921, 0, 524298, 536870921, 0, 524299, 536870921, 0, 524300, 536870921, 0, 524301, 536870921, 0, 524302, 536870921, 0, 524303, 536870921, 0, 589824, 536870921, 0, 589825, 536870921, 0, 589826, 536870921, 0, 589827, 536870921, 0, 589828, 536870921, 0, 589829, 536870921, 0, 589830, 536870921, 0, 589831, 536870921, 0, 589832, 536870921, 0, 589833, 536870921, 0, 589834, 536870921, 0, 589835, 536870921, 0, 589836, 536870921, 0, 589837, 536870921, 0, 589838, 536870921, 0, 589839, 536870921, 0 )

[node name="player1" type="Area2D" parent="."]
position = Vector2( 43, 410 )
rotation = 3.14159
scale = Vector2( 0.5, -0.5 )
script = ExtResource( 3 )
speed = 5
MAX_X = 200

[node name="player1" type="Sprite" parent="player1"]
visible = false
position = Vector2( 7.69232, 2.99997 )
rotation = 3.14159
scale = Vector2( 0.961538, -1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="player1"]
position = Vector2( 3.84621, 2.99997 )
rotation = 3.14159
scale = Vector2( 0.961538, -1 )
polygon = PoolVector2Array( 18.6, -61.5, 28, -61.5, 28, -59.4, 34, -54.4, 34, -51.5, 54.1, -51.5, 62.1, -60.5, 92, -60.5, 92, -24.5, 91.1, -24.5, 61, -22.4, 61, -24.7, 53.2, -32.5, 37.6, -32.5, 46, -27.6, 46, -26.4, 61, -12.4, 61, -10, 67, -1.5, 74.8, -1.5, 80, 3.7, 80, 29.3, 74.8, 34.5, 69, 34.5, 69, 55.1, 60.7, 68.5, -75, 68.5, -84, 58.3, -84, 52.5, -84.9, 34.5, -90.8, 34.5, -92, 33.3, -92, 0.5, -91.4, 0.5, -84, -1.1, -84, -2.3, -60.9, -28.5, -58.5, -28.5, -50, -34.5, -50, -55.5, -47.9, -55.5, -42.9, -61.5, -34.6, -61.5, -24.1, -68.5, 8.1, -68.5 )

[node name="oof" type="AudioStreamPlayer2D" parent="player1"]
stream = ExtResource( 4 )

[node name="power" type="ProgressBar" parent="player1"]
margin_left = 207.999
margin_top = 87.9995
margin_right = 635.999
margin_bottom = 141.999
rect_scale = Vector2( -0.999998, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="turret" type="Node2D" parent="player1"]
position = Vector2( 7.99991, -42.0001 )
rotation = 0.00230209

[node name="turret" type="Sprite" parent="player1/turret"]
position = Vector2( -49.779, -5.88965 )
rotation = -3.13812
texture = ExtResource( 8 )

[node name="fire_point" type="Node2D" parent="player1/turret/turret"]
position = Vector2( 62.2211, -0.106018 )

[node name="TanksTankTracks3" type="Sprite" parent="player1"]
position = Vector2( 10.0001, 39.9999 )
texture = ExtResource( 9 )

[node name="TanksTankGreenBody3" type="Sprite" parent="player1"]
position = Vector2( 12, -16 )
texture = ExtResource( 7 )

[node name="player2" type="Area2D" parent="."]
position = Vector2( 983, 418 )
rotation = 3.14159
scale = Vector2( 0.5, -0.5 )
script = ExtResource( 3 )
speed = 5
PLAYER = "2"
MAX_X = 1000
MIN_X = 850

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="player2"]
position = Vector2( 6.73083, -16.0001 )
polygon = PoolVector2Array( 18.6, -61.5, 28, -61.5, 28, -59.4, 34, -54.4, 34, -51.5, 54.1, -51.5, 62.1, -60.5, 92, -60.5, 92, -24.5, 91.1, -24.5, 61, -22.4, 61, -24.7, 53.2, -32.5, 37.6, -32.5, 46, -27.6, 46, -26.4, 61, -12.4, 61, -10, 67, -1.5, 74.8, -1.5, 80, 3.7, 80, 29.3, 74.8, 34.5, 69, 34.5, 69, 55.1, 60.7, 68.5, -75, 68.5, -84, 58.3, -84, 52.5, -84.9, 34.5, -90.8, 34.5, -92, 33.3, -92, 0.5, -91.4, 0.5, -84, -1.1, -84, -2.3, -61.9, -27.5, -59.6, -27.5, -50, -34.5, -50, -55.5, -47.9, -55.5, -42.9, -61.5, -34.6, -61.5, -24.1, -68.5, 8.1, -68.5 )

[node name="TanksTankGrey3" type="Sprite" parent="player2"]
visible = false
position = Vector2( 5.76927, -17 )
texture = ExtResource( 2 )

[node name="TanksTankTracks3" type="Sprite" parent="player2"]
position = Vector2( 0.00012207, 14 )
texture = ExtResource( 9 )

[node name="turret" type="Node2D" parent="player2"]
position = Vector2( 2, -58 )
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )

[node name="turret" type="Sprite" parent="player2/turret"]
position = Vector2( -92, 4.00024 )
rotation = 3.14159
scale = Vector2( 2, -2 )
texture = ExtResource( 8 )

[node name="fire_point" type="Node2D" parent="player2/turret/turret"]
position = Vector2( 110, 0 )

[node name="TanksTankGreyBody3" type="Sprite" parent="player2"]
position = Vector2( 0, -34 )
texture = ExtResource( 10 )

[node name="oof" type="AudioStreamPlayer2D" parent="player2"]
position = Vector2( 168.269, 101 )
stream = ExtResource( 4 )

[node name="power" type="ProgressBar" parent="player2"]
margin_left = 207.999
margin_top = 87.9995
margin_right = 635.999
margin_bottom = 141.999
rect_scale = Vector2( -0.999998, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score1" type="Label" parent="."]
margin_left = 136.0
margin_right = 176.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score P1" type="Label" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 129.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 5 )
text = "Score P1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score P2" type="Label" parent="."]
margin_left = 836.0
margin_right = 963.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Score P2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Label" parent="."]
anchor_bottom = 0.241
margin_left = 974.0
margin_right = 1021.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="player1" to="player1" method="_on_player1_area_entered"]
[connection signal="area_entered" from="player2" to="player1" method="_on_player2_area_entered"]
